GNOME Bugzilla – Bug 611435
Ctrl+L does not always select the text in the URL entry bar
Last modified: 2014-03-31 12:41:41 UTC
Steps to reproduce: 1. Start epiphany 2. Go to some website (http://planet.gnome.org/) 3. Press Ctrl+T to open a new tab 4. Enter some text 5. Press Ctrl+L to select the text just entered Expected outcome: The URL entry text is selected Actual outcome: The URL entry text is not selected Other comments: I'm going to add a patch against the Git master branch that fixes this by selecting all the text in the entry when Ctrl+L is pressed inside the entry.
Created attachment 154919 [details] [review] Proposed patch
I could confirm this happening, but only when the autocompletion window is opening after entering some text in the entry, if the url autocompetion is opened Ctrl+L doesn't work as expected. I found this behavour in Epiphany 3.0.1 under Fedora 15.
*** Bug 672823 has been marked as a duplicate of this bug. ***
Review of attachment 154919 [details] [review]: The situation when this does not work is when the autocompletion popup is opened, since it will grab all keyboard events. We have to mention that in the commit message. I guess this won't cause any problems, but we'll see :) ::: lib/widgets/ephy-location-entry.c @@ +482,3 @@ + * Make sure Ctrl+L selects all text even if the entry + * widget has focus already. + */ Again, this needs to explain why we are doing this (completion popup + grabs). Otherwise the window would get the event and select the entry contents as usual. @@ +486,3 @@ + { + gtk_editable_select_region (GTK_EDITABLE (entry), + 0, -1); This has to use ephy_location_entry_activate to be consistent with the existing code.
This bug can be reproduced in Epiphany 3.12
Comment on attachment 154919 [details] [review] Proposed patch I've addressed the review comments and pushed the patch to git master. Thanks!