location-entry: Make CTRL+l work when the completion menu is shown

When the completion popup menu is shown, it has an active keyboard grab
that prevents the key events from being handled by the window. Handle
the CTRL+l shortcut in the location entry to activate the entry when the
completion popup menu is visible.

https://bugzilla.gnome.org/show_bug.cgi?id=611435